消除部分警告